<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/grWelcome3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#1483C2"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <ImageView
            android:id="@+id/misc_042"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="60dp"
            android:src="@drawable/misc_042"
            tools:ignore="MissingConstraints" />

        <ImageView
            android:id="@+id/jordan"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:src="@drawable/jordan"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtpower"
            tools:ignore="MissingConstraints" />
        <ImageView
            android:id="@+id/logoNike"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/logonike"
            android:paddingTop="200dp"
            tools:ignore="MissingConstraints" />
        <TextView
            android:id="@+id/txtpower"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/jordan"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="34sp"
            android:textStyle="bold"
            android:text="@string/text_power"/>

        <TextView
            android:id="@+id/text_attractive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtpower"
            android:gravity="center"
            android:textColor="#D8D8D8"
            android:textSize="16sp"
            android:layout_marginTop="20dp"
            android:text="@string/text_attractive"/>

        <ImageView
            android:id="@+id/pagerID2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/gr1000000729"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:paddingTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/text_attractive"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteY="0dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnGetPower"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pagerID2"
            android:background="@drawable/rounded"
            android:layout_marginTop="84dp"
            android:textColor="#2B2B2B"
            android:textAllCaps="false"
            android:text="@string/btn_next"
            android:layout_width="300dp"
            android:layout_height="wrap_content"/>



    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>