<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/grWelcome2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#1483C2"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <ImageView
            android:id="@+id/highlight_10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="60dp"
            android:src="@drawable/highlight_10"
            tools:ignore="MissingConstraints" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="40dp"
            android:paddingTop="60dp"
            android:src="@drawable/misc_04"
            app:layout_constraintBottom_toBottomOf="@+id/highlight_10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />
        <ImageView
            android:id="@+id/spring_prev_ui1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="40dp"
            android:paddingTop="70dp"
            android:src="@drawable/spring_prev_ui1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />
        <ImageView
            android:id="@+id/logoNike"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/logonike"
            android:paddingTop="200dp"
            tools:ignore="MissingConstraints" />
        <TextView
            android:id="@+id/txtLetStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spring_prev_ui1"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="34sp"
            android:layout_marginTop="50dp"
            android:textStyle="bold"
            android:text="@string/text_getStartedJourney"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtLetStart"
            android:gravity="center"
            android:textColor="#D8D8D8"
            android:textSize="16sp"
            android:layout_marginTop="20dp"
            android:text="@string/text_getStartedSmart"/>
        <ImageView
            android:id="@+id/pagerID2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:src="@drawable/group000000730"
            android:paddingTop="580dp"
            tools:ignore="MissingConstraints" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnGetSmart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pagerID2"
            android:background="@drawable/rounded"
            android:layout_marginTop="50dp"
            android:textColor="#2B2B2B"
            android:textAllCaps="false"
            android:text="@string/btn_next"
            android:layout_width="300dp"
            android:layout_height="wrap_content"/>



    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>